package services

import (
	"context"
	"fmt"
	"time"

	"github.com/zebbank/edge-esg-backend/internal/dtos"
	"github.com/zebbank/edge-esg-backend/internal/types"
)

type Orchestrator struct {
	riskClient       RiskAgentClient
	tradingClient    TradingAgentClient
	quantumClient    QuantumAgentClient
	complianceClient ComplianceAgentClient
	consensusClient  ConsensusAgentClient
	blockchainClient BlockchainAgentClient
}

func NewOrchestrator() *Orchestrator {
	return &Orchestrator{}
}

// Execute8LayerPipeline orchestrates all 10 agents
func (o *Orchestrator) Execute8LayerPipeline(ctx context.Context, req *dtos.AnalyzeRequest) (*dtos.AnalyzeResponse, error) {
	startTime := time.Now()

	// Layer 1: DUAL INPUT (Mock AlphaVantage + Satellite)
	mockData := o.fetchMockData(req.CompanyName)

	// Layer 2: 10-AGENT SWARM (Parallel gRPC)
	agentResults := o.callAgentsParallel(ctx, mockData)

	// Layer 3: QUANTUM (Mock D-Wave 8s)
	quantumResult := o.simulateQuantum(ctx)

	// Layer 4: DIGITAL TWIN (Mock 3D factory)
	twinData := o.simulateDigitalTwin(ctx)

	// Layer 5: CONSENSUS (9/10 voting)
	consensus := o.calculateConsensus(agentResults)

	// Layer 6: BLOCKCHAIN (Mock Polygon)
	auditHash := o.recordBlockchain(ctx, consensus)

	// Layer 7: OPTIMIZATION (Portfolio rebalancing)
	optimized := o.optimizePortfolio(consensus)

	// Layer 8: MASKING (Role-based filtering)
	response := o.applyMasking(optimized, req.UserRole)

	response.ProcessingTimeMs = time.Since(startTime).Milliseconds()
	response.AuditHash = auditHash

	return response, nil
}

func (o *Orchestrator) fetchMockData(company string) map[string]interface{} {
	return map[string]interface{}{
		"company":          company,
		"revenue":          15000.0,
		"carbon_emissions": 2.5,
		"water_usage":      1200.0,
		"ndvi_score":       0.75,
	}
}

func (o *Orchestrator) callAgentsParallel(ctx context.Context, data map[string]interface{}) []AgentResult {
	results := []AgentResult{
		{Agent: "risk", Score: 4.2, Action: string(types.RiskReject)},
		{Agent: "trading", Score: 8.5, Action: string(types.ActionBuy)},
		{Agent: "compliance", Score: 7.8, Action: "PASS"},
		{Agent: "quantum", Score: 9.1, Action: "OPTIMAL"},
		{Agent: "consensus", Score: 8.2, Action: "APPROVE"},
		{Agent: "blockchain", Score: 10.0, Action: "RECORDED"},
		{Agent: "digital-twin", Score: 7.5, Action: "SIMULATED"},
		{Agent: "optimization", Score: 8.8, Action: "REBALANCED"},
		{Agent: "regulation", Score: 9.0, Action: "COMPLIANT"},
	}
	return results
}

func (o *Orchestrator) simulateQuantum(ctx context.Context) string {
	time.Sleep(8 * time.Millisecond) // Mock 8s D-Wave
	return "1M_SCENARIOS_ANALYZED"
}

func (o *Orchestrator) simulateDigitalTwin(ctx context.Context) string {
	return "3D_FACTORY_COORDS_GENERATED"
}

func (o *Orchestrator) calculateConsensus(results []AgentResult) ConsensusResult {
	approveCount := 0
	totalScore := 0.0
	for _, r := range results {
		totalScore += r.Score
		if r.Action == "APPROVE" || r.Action == "PASS" || r.Action == "COMPLIANT" {
			approveCount++
		}
	}
	return ConsensusResult{
		VoteRatio:    float64(approveCount) / float64(len(results)),
		AverageScore: totalScore / float64(len(results)),
		Decision:     "REJECT", // Based on risk agent
	}
}

func (o *Orchestrator) recordBlockchain(ctx context.Context, consensus ConsensusResult) string {
	return fmt.Sprintf("0x%x", time.Now().Unix())
}

func (o *Orchestrator) optimizePortfolio(consensus ConsensusResult) *dtos.AnalyzeResponse {
	return &dtos.AnalyzeResponse{
		ESGScore:   "4.2/10",
		RiskAction: "REJECT",
		TradingSignal: dtos.TradingSignal{
			Action:      "BUY",
			Symbol:      "SUZLON.NS",
			TargetPrice: "â‚¹312",
			Confidence:  0.91,
		},
	}
}

func (o *Orchestrator) applyMasking(resp *dtos.AnalyzeResponse, role string) *dtos.AnalyzeResponse {
	if role != "COMPLIANCE" && role != "ADMIN" {
		resp.MaskedData = true
	}
	return resp
}

type AgentResult struct {
	Agent  string
	Score  float64
	Action string
}

type ConsensusResult struct {
	VoteRatio    float64
	AverageScore float64
	Decision     string
}

type RiskAgentClient interface{}
type TradingAgentClient interface{}
type QuantumAgentClient interface{}
type ComplianceAgentClient interface{}
type ConsensusAgentClient interface{}
type BlockchainAgentClient interface{}
